--- a/config.org
+++ b/config.org
@@ -1,5 +1,13 @@
-;;; ~/.config/doom/config.el -*- lexical-binding: t; -*-
+#+title: Config
 
+* Header
+#+begin_src emacs-lisp
+;;; ~/.config/doom/config.el -*- lexical-binding: t; -*-
+#+end_src
+
+* UI
+** Theme
+#+begin_src emacs-lisp
 (setq
  ;; doom-scratch-initial-major-mode 'lisp-interaction-mode
  doom-theme 'doom-dracula
@@ -7,7 +15,10 @@
  ;; disable it by default.
  lsp-ui-sideline-enable nil
  lsp-enable-symbol-highlighting nil)
+#+end_src
 
+** Splash
+#+begin_src emacs-lisp
 ;;; :ui doom-dashboard
 (setq fancy-splash-image (concat doom-private-dir "splash.png"))
 
@@ -22,21 +33,34 @@
 ;;   (nyan-mode t)
 ;;   (nyan-animate-cat t))
 
+#+end_src
+** Nyan cat
+#+begin_src emacs-lisp
 (use-package nyan-mode
   :init
   (setq-default nyan-animate-nyancat t
                 nyan-wavy-trail t)
   :config
   (nyan-mode t))
-
+#+end_src
+** Font
+#+begin_src emacs-lisp
 (setq doom-font (font-spec :family "JetBrainsMono Nerd Font" :size 18 :weight 'semi-light))
+#+end_src
 
+* Debugger
+** DAP Mode
+#+begin_src emacs-lisp
 (after! dap-mode
   (setq dap-python-debugger 'debugpy)
   (setq dap-auto-configure-features '(sessions locals controls tooltip)))
 ;; (setq dap-auto-configure-mode t)
 ;; (requires 'dap-cpptools)
+#+end_src
 
+* Markdown
+** Beautify headers
+#+begin_src emacs-lisp
 (custom-set-faces!
   '(markdown-header-delimiter-face :foreground "#616161" :height 0.9)
   '(markdown-header-face-1 :height 1.8 :foreground "#A3BE8C" :weight extra-bold :inherit markdown-header-face)
@@ -45,12 +69,28 @@
   '(markdown-header-face-4 :height 1.15 :foreground "#BF616A" :weight bold :inherit markdown-header-face)
   '(markdown-header-face-5 :height 1.1 :foreground "#b48ead" :weight bold :inherit markdown-header-face)
   '(markdown-header-face-6 :height 1.05 :foreground "#5e81ac" :weight semi-bold :inherit markdown-header-face))
+#+end_src
 
+** Darken font
+#+begin_src emacs-lisp
 (custom-set-faces!
   `(markdown-code-face :background ,(doom-darken 'bg 0.075)))
+#+end_src
+* LaTex
+#+begin_src
+;; (defun nd-email-filter (contents backend info)
+;;   (let ((email (plist-get info :email)))
+;;     (replace-regexp-in-string "@EMAIL@" email contents t)))
 
+;; (add-to-list 'org-export-filter-final-output-functions (function nd-email-filter))
+#+end_src
+
+#+begin_src emacs-lisp
 (setq org-latex-pdf-process (list "latexmk -shell-escape -bibtex -f -pdf %f"))
+#+end_src
 
+Document format used in Georgia Tech lessons by David Joyner.
+#+begin_src emacs-lisp
 (with-eval-after-load "ox-latex"
   (add-to-list 'org-latex-classes
                '("jdf2"
@@ -60,15 +100,29 @@
                  ("\\subsubsection{%s}" . "\\subsubsection*{%s}")
                  ("\\paragraph{%s}" . "\\paragraph*{%s}")
                  ("\\subparagraph{%s}" . "\\subparagraph*{%s}"))))
+#+end_src
 
+
+* Key chords
+Evil escape sequence with ~jj~
+#+begin_src emacs-lisp
 (setq key-chord-two-keys-delay 0.8)
 (key-chord-define evil-insert-state-map "jj" 'evil-normal-state)
 (key-chord-mode 1)
+#+end_src
 
+Prevents some cases of Emacs flickering
+#+begin_src emacs-lisp
 (add-to-list 'default-frame-alist '(inhibit-double-buffering . t))
+#+end_src
 
+Bug in Doom Emacs?
+#+begin_src emacs-lisp
 (setq ob-async-no-async-languages-alist '("jupyter-python"))
+#+end_src
 
+* Key bindings
+#+begin_src emacs-lisp
 (map! :n [tab] (general-predicate-dispatch nil
                  (and (featurep! :editor fold)
                       (save-excursion (end-of-line) (invisible-p (point))))
@@ -89,31 +143,55 @@
       "f T" #'browse-dotfiles
       "f n" #'find-in-orgnotes
       "f N" #'browse-orgnotes)
+#+end_src
 
+* Modules
+Switch to the new window after splitting
+#+begin_src emacs-lisp
 (setq evil-split-window-below t
       evil-vsplit-window-right t)
+#+end_src
 
+Silence all that useless output
+#+begin_src emacs-lisp
 (setq direnv-always-show-summary nil)
+#+end_src
 
+** PlantUML
+Set plantuml path
+#+begin_src emacs-lisp
 (setq plantuml-jar-path "~/bin/plantuml.jar")
 (setq org-plantuml-jar-path "~/bin/plantuml.jar")
+#+end_src
 
+** Magit
+#+begin_src emacs-lisp
 ;; (setq magit-repository-directories '(("~/projects" . 2))
 ;;     magit-save-repository-buffers nil
 ;;     magit-inhibit-save-previous-winconf t
 ;;     transient-values '((magit-commit "--gpg-sign=5F6C0EA160557395")
 ;;     (magit-rebase "--autosquash" "--gpg-sign=5F6C0EA160557395")
 ;;     (magit-pull "--rebase" "--gpg-sign=5F6C0EA160557395")))
+#+end_src
 
+** Tmux
+Set Alacritty as the default terminal for ob-tmux
+#+begin_src emacs-lisp
 (setq org-babel-tmux-terminal "alacritty")
+#+end_src
 
+* Org
+** Set directory
+#+begin_src emacs-lisp
 (setq org-directory "~/org"
       ;; org-archive-location (concat org-directory ".archive/%s::")
       ;; org-roam-directory (concat org-directory "notes/")
       org-journal-encrypt-journal t
       org-journal-file-format "%Y%m%d.org"
       org-ellipsis " ▼ ")
-
+#+end_src
+** Beautify headings
+#+begin_src emacs-lisp
 (after! org
   (custom-set-faces!
     ;; '(outline-1 :weight extra-bold :height 1.25)
@@ -125,11 +203,19 @@
     ;; '(outline-8 :weight semi-bold)
     ;; '(outline-9 :weight semi-bold)
     '(org-document-title :height 1.8)))
-
+#+end_src
+** Patch evil-org key map
+Patch up the evil-org key map, so that org is usable with daemon
+https://github.com/hlissner/doom-emacs/issues/1897
+#+begin_src emacs-lisp
 (after! evil-org
   (evil-define-key '(normal visual) evil-org-mode-map
     (kbd "TAB") 'org-cycle))
+#+end_src
 
+** Export customizations
+Export documents to different directories based on file extension
+#+begin_src emacs-lisp
 (defvar org-export-output-directory-prefix "export_" "prefix of directory used for org-mode export")
 (defadvice org-export-output-file-name (before org-add-export-dir activate)
   "Modifies org-export to place exported files in a different directory"
@@ -137,7 +223,11 @@
     (setq pub-dir (concat org-export-output-directory-prefix (substring extension 1)))
     (when (not (file-directory-p pub-dir))
       (make-directory pub-dir))))
+#+end_src
+** Tangle in dir
+https://emacs.stackexchange.com/questions/46479/how-to-set-a-tangled-parent-directory-for-each-subtree-in-org-mode
 
+#+begin_src emacs-lisp
 ;;; use :tangle-dir to specify which directory to tangle file to
 (defun org-in-tangle-dir (sub-path)
   "Expand the SUB-PATH into the directory given by the tangle-dir
@@ -147,12 +237,23 @@ property if that property exists, else use the
                     (or
                      (org-entry-get (point) "tangle-dir" 'inherit)
                      (default-directory))))
+#+end_src
 
+** HTML checkboxes
+#+begin_src emacs-lisp
 (setq org-html-checkbox-type 'html)
+#+end_src
 
+** Agenda
+Set path to org agenda
+#+begin_src emacs-lisp
 (after! org
   (setq org-agenda-files '("~/org/agenda.org")))
+#+end_src
 
+*** Change priorities face
+Replace the defaults ~[A]~, ~[B]~ and ~[C]~.
+#+begin_src emacs-lisp
 (setq
  ;; org-fancy-priorities-list '("[A]" "[B]" "[C]")
  ;; org-fancy-priorities-list '("❗" "[B]" "[C]")
@@ -162,7 +263,10 @@ property if that property exists, else use the
    (?B :foreground "#98be65" :weight bold)
    (?C :foreground "#c678dd" :weight bold))
  org-agenda-block-separator 8411)
+#+end_src
 
+*** Group TODOs by priority
+#+begin_src emacs-lisp
 (setq org-agenda-custom-commands
       '(("v" "A better agenda view"
          ((tags "PRIORITY=\"A\""
@@ -176,10 +280,17 @@ property if that property exists, else use the
                  (org-agenda-overriding-header "Low-priority unfinished tasks:")))
           (agenda "")
           (alltodo "")))))
+#+end_src
 
+** TODO Habits
+#+begin_src emcas-lisp
 ;; (after! org
 ;;   (add-to-list 'org-modules 'org-habit t))
+#+end_src
 
+* Other
+** Keypression
+#+begin_src emacs-lisp
 ;; (use-package! keypression
 ;;   :defer t
 ;;   :config
@@ -190,7 +301,10 @@ property if that property exists, else use the
 ;;         keypression-cast-command-name-format "%s  %s"
 ;;         keypression-combine-same-keystrokes t
 ;;         keypression-font-face-attribute '(:width normal :height 200 :weight bold)))
-
+#+end_src
+* Anki
+Tools to make working with Anki easier.
+#+begin_src emacs-lisp
 (use-package anki-editor
   :after org
   ;; :bind (:map org-mode-map
@@ -229,11 +343,24 @@ property if that property exists, else use the
   (anki-editor-reset-cloze-number)
   )
 
+#+end_src
+
+* Yasnippet
+
+#+begin_src emacs-lisp
 (setq yas-snippet-dirs (append yas-snippet-dirs
                                '("~/.config/doom/snippets"))) ;; replace with your folder for snippets
+#+end_src
 
+* Projectile
+** Set projectile path for project discovery
+#+begin_src emacs-lisp
 (setq projectile-project-search-path '("~/Development/" "~/Code/"))
+#+end_src
 
+** Tune indexing
+#+begin_src emacs-lisp
 (after! projectile
   (setq projectile-enable-caching nil
         projectile-indexing-method 'alien))
+#+end_src
